# Segmentation

./: README.md  convert_stray.py  pyproject.toml  requirements.txt
mosaic3d/: .gitignore  .pre-commit-config.yaml  README.md  check_coords.py  pyproject.toml  requirements.txt  save_final_ply.py
mosaic3d/configs/data/local/: ar_only.yaml  sc+ar_local.yaml  stray_refined_only.yaml
mosaic3d/scripts/: mask_mapping.py  visualize.py
mosaic3d/src/data/metadata/split_files/: arkitscenes_val.txt
mosaic3d/src/models/lightning_modules/: language_module.py
