[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slam-segmentation"
version = "1.0.0"
description = "3D Segmentation using Mosaic3D and OpenScene models for SLAM data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SLAM Segmentation Team"}
]
keywords = ["segmentation", "3d", "slam", "mosaic3d", "openscene", "point-cloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.20.0",
    "open3d>=0.15.0",
]

[project.optional-dependencies]
full = [
    "torch==2.2.2",
    "torchvision>=0.15.0",
    "lightning==2.2",
    "hydra-core==1.3.2",
    "wandb",
    "scipy",
    "matplotlib",
    "transformers",
    "einops",
    "scikit-image",
]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "pre-commit>=2.0",
]

[project.urls]
Homepage = "https://github.com/SLAM-Dunk-Prometheus/Segmentation"
Repository = "https://github.com/SLAM-Dunk-Prometheus/Segmentation"
Issues = "https://github.com/SLAM-Dunk-Prometheus/Segmentation/issues"

[project.scripts]
convert-stray = "convert_stray:main"

[tool.setuptools]
py-modules = ["convert_stray"]

[tool.black]
line-length = 99
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]